--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background: black;
+  background: #000;
 	margin-top: 2em; 
 	font-family: Consolas, Menlo, Monaco, Lucida Console, Courier New, Courier, monospaced;
 }
