--- a/src/Menu.css
+++ b/src/Menu.css
@@ -1,15 +1,20 @@
 #menu {
     margin-top: .5rem;
-	padding: .5rem;
 	background-color: #0a0;
+}
+.nav-link {
+	/* margin: .5rem; */
+	line-height: 2;
 }
 #menu a {
 	font-size: 1.4rem;
+	font-weight: 700;
 	color: silver ;
 }
 /* #menu a :hover {
 	font-size: 2rem;
 } */
 .active {
-    color: #0099FF !important;
+	background: rgba(215, 253, 2,1);
+	color: #0a0 !important;
 }
