--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background: #000;
+	background: #000;
 	margin-top: 2em; 
 	font-family: Consolas, Menlo, Monaco, Lucida Console, Courier New, Courier, monospaced;
 }
@@ -8,36 +8,41 @@ body,a {
 	color: #0a0;
 }
 #menu {
-	margin-top: .5rem;
-background-color: #0a0;
+	margin-top: 1.5rem;
+	background-color: #0a0;
 }
 .nav-link {
 /* margin: .5rem; */
 line-height: 2;
 }
 #menu a {
-font-size: 1.4rem;
-font-weight: 700;
-color: silver ;
+	font-size: 1.4rem;
+	font-weight: 700;
+	color: silver ;
 }
 /* #menu a :hover {
 font-size: 2rem;
 } */
 .active {
-background: rgba(215, 253, 2,1);
-color: #0a0 !important;
+	background: rgba(215, 253, 2,1);
+	color: #0a0 !important;
 }
 .card {
 	background-color: inherit;
-	border: .5px solid #0a0;
+	border: .7px dotted  #0a0;
 	margin: 2rem auto;
 }
 .card .btn-outline-success{
 	color: silver;
 }
-.card :hover{
-	background: rgba(215, 253, 2,1);
+ .card :hover{
+	 background: rgba(215, 253, 2,1); 
+} 
+
+.card:hover .cardbtn:hover {
+	background: #0a0 !important;
 }
+
 .special {
 	color: rgba(215, 253, 2,1) !important;
 }
@@ -47,6 +52,25 @@ color: #0a0 !important;
 }
 #terminal , .terminalText{
 	font-weight: bold;
+}
+kbd {
+	color: inherit;
+}
+code {
+	background-color: rgba(215, 253, 2,1);
+	color: #0a0;
+}
+code :hover {
+	font-size: 120%;
+}
+code a {
+	color: inherit;
+	text-decoration: none;
+	font-weight: bold;
+}
+code a,code a:link,code a:visited,code a:hover,code a:focus,code a:active{
+    color: inherit;
+    text-decoration: none;
 }
 
 @media only screen and (max-width: 767px) {
@@ -82,7 +106,7 @@ color: #0a0 !important;
 	color: rgba(215, 253, 2,1);
 	font-weight: bold;
 	animation-name: blinker;
-	animation-duration: 0.7s;
+	animation-duration: .7s;
 	animation-timing-function: linear;
 	animation-iteration-count: infinite;
 }
